front-end/app/src/Components/DriverForm/NewDriver.css
.new-driver {
  background-color: #c0c0c000;
  padding: 1rem;
  margin: 3rem auto;
  width: 65rem;
  max-width: 95%;
  border-radius: 12px;
  text-align: center;
  /*box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
  border: 0.19rem solid #0a93ee;*/
}

.new-driver-label {
  font: inherit;
  font-size: 40px;
  font-weight: bold;
}

.header {
  margin-top: 0.3;
  margin-bottom: 2rem;
}

.new-driver button {
  font: inherit;
  font-size: 30px;
  cursor: pointer;
  border: 1px solid #0a93ee;
  background-color: #0a81cf;
  color: white;
  border-radius: 30px;
  margin-top: 2rem;
  width: 20rem;
  height: 4rem;
  margin-bottom: 3.5rem;
}

.new-driver button:hover,
.new-driver button:active {
  background-color: #0886da;
  border-color: #0a93ee;
}

.line_bold {
  border: 1.5px solid #b6b6b6;
  width: 100%;
  margin-top: 1rem;
  margin-bottom: 1;
}

